--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
